# Project_1

./: .gitignore  .pdm-python  README.md  leistungsergometer_KS.py  main.py  my_classes.py  my_functions.py  pyproject.toml  simulate_data.py  test.py
