[project]
name = "LeistungsErgometer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Krainer Simon", email = "krainersimon@gmail.com"},
]
dependencies = ["numpy>=2.0.2", "pandas>=2.2.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
